# PharmaDocs-AI

./: .env  .env.example  .gcloudignore  .gitignore  Calculation sheet_AMV.xls  Dockerfile  README.md  add_columns.py  add_reference_test.py  add_subscription_columns.py  amv_company_settings.db  app.py  check_database.py  database.py  fix_column_length.py  generate_static_mockups.py  import_pv_stages.py  main.py  models.py  models_backup.py  pyproject.toml  requirements.txt  test_pv_system.py  test_report_output.docx  verify_rdkit_fallback.py
app_routes/: admin.py  amv_routes.py  auth.py  company.py  dashboard.py  documents.py  equipments.py  pdf_generator.py  pv_routes.py  pvr_templates.py  razorpay_routes.py  subscription_routes.py  user.py  validation_routes.py
instance/: pharmadocs.db  pharmadocs.db.bak  pharmadocs_backup.db
migrations/: env.py
reports/: AMV_Report_Paracetamol_Tablets_500mg_20251015_224001.docx  AMV_Report_Paracetamol_Tablets_500mg_20251016_065559.docx  AMV_Report_Paracetamol_Tablets_500mg_20251016_080615.docx  AMV_Report_Paracetamol_Tablets_500mg_20251016_083135.docx  AMV_Report_Paracetamol_Tablets_500mg_20251016_084459.docx  AMV_Report_Paracetamol_Tablets_500mg_20251016_092437.docx  AMV_Report_Paracetamol_Tablets_500mg_20251016_093300.docx  AMV_Report_Paracetamol_Tablets_500mg_20251016_094009.docx  AMV_Report_Paracetamol_Tablets_500mg_20251016_094317.docx  AMV_Report_Paracetamol_Tablets_500mg_20251016_094854.docx  AMV_Report_Paracetamol_Tablets_500mg_20251016_095559.docx  AMV_Report_Paracetamol_Tablets_500mg_20251016_100106.docx  (+8 more)
(+171 files in other folders)
